--- a/aula_1/index.html
+++ b/aula_1/index.html
@@ -1,11 +1,45 @@
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>gremo</title>
+    <link rel="icon" type="escudo-gremio.png" href="escudo-gremio.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="div-hino">
+            <h1>GRÊMIO</h1>
+            <p>
+                <strong>Até a pé nós iremos</strong><br>
+                <i>para o que der e vier</i><br>
+                <u>mas o certo é que nós estaremos</u><br>
+                com o <sub>Grêmio</sub> onde o <sup>Grêmio</sup> estiver<br>
+                <br>
+                Cinqüenta anos de glórias<br>
+                tens imortal tricolor<br>
+                os feitos da tua história<br>
+                canta o Rio Grande com amor<br>
+                <br>
+                (refrão)<br>
+                <br>
+                Nós como bons torcedores<br>
+                sem hesitarmos sequer<br>
+                aplaudiremos o <del>Grêmio</del><br>
+                aonde o <ins>Grêmio</ins> estiver<br>
+                <br>
+                (refrão)<br>
+                <br>
+                Lara o craque imortal<br>
+                soube seu nome elevar<br>
+                hoje com o mesmo ideal<br>
+                nós saberemos te honrar<br>
+            </p>
+        </div>
+        <div id="div-bart">
+            <img id="bart" src="bart-gremio.jpg" alt="Bart Grêmio">
+        </div>
+    </div>
 </body>
 </html>
