--- a/aula_1/index.html
+++ b/aula_1/index.html
@@ -5,36 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gremo</title>
     <link rel="icon" type="escudo-gremio.png" href="escudo-gremio.png">
+    <link rel="stylesheet" href="vars-gremo.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div id="div-hino">
-            <h1>GRÊMIO</h1>
+            <h1 name="titulo">HINO DO GREMO</h1>
             <p>
                 <strong>Até a pé nós iremos</strong><br>
                 <i>para o que der e vier</i><br>
                 <u>mas o certo é que nós estaremos</u><br>
-                com o <sub>Grêmio</sub> onde o <sup>Grêmio</sup> estiver<br>
-                <br>
+                com o <sub>Grêmio</sub> onde o <sup>Grêmio</sup> estiver
+            </p>
+            <p>
                 Cinqüenta anos de glórias<br>
                 tens imortal tricolor<br>
                 os feitos da tua história<br>
-                canta o Rio Grande com amor<br>
-                <br>
-                (refrão)<br>
-                <br>
+                canta o Rio Grande com amor
+            </p>
+            <!-- vamo vamo inteee -->
+            <p>
+                (refrão)
+            </p>
+            <p>
                 Nós como bons torcedores<br>
                 sem hesitarmos sequer<br>
                 aplaudiremos o <del>Grêmio</del><br>
-                aonde o <ins>Grêmio</ins> estiver<br>
-                <br>
-                (refrão)<br>
-                <br>
+                aonde o <ins>Grêmio</ins> estiver
+            </p>
+            <p>
+                (refrão)
+            </p>
+            <p>
                 Lara o craque imortal<br>
                 soube seu nome elevar<br>
                 hoje com o mesmo ideal<br>
-                nós saberemos te honrar<br>
+                nós saberemos te honrar
             </p>
         </div>
         <div id="div-bart">
