--- a/aula_2/andrei/index.html
+++ b/aula_2/andrei/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img title="Imagem" src="./watermelon-cat.png" alt="Texto alternativo">
 </body>
 </html>
