--- a/aula_2/andrei/pagina_2.html
+++ b/aula_2/andrei/pagina_2.html
@@ -1,11 +1,13 @@
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="./pagina_1.html">Clique aqui</a>
     <img title="Imagem" src="./watermelon-cat.png" alt="Texto alternativo">
 </body>
 </html>
